--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
         <input type="number" class="form-control" [(ngModel)]="calc.B" />
       </div>
       <div class="mb-3">
-        <button class="btn btn-primary" (click)="calculate('/')">Sum</button>
+        <button class="btn btn-primary" (click)="calculate('+')">Sum</button>
       </div>
     </div>
     <div class="card-footer text-center">
