--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <main class="container my-5">
   <section class="card">
     <div class="card-header text-center">
-      <h1>Calculator app</h1>
+      <h1>{{ title }}</h1>
     </div>
     <div class="card-body py-3">
       <div class="mb-3">
