--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -22,11 +22,7 @@
     </div>
   </div>
   <div>
-    <button
-      type="submit"
-      class="btn btn-primary"
-      (click)="calculate('+')"
-    >
+    <button type="submit" class="btn btn-primary" (click)="calculate('+')">
       Sum
     </button>
   </div>
