--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,14 +4,10 @@
       <h1>{{ title }}</h1>
     </div>
     <div class="card-body py-3">
-      <app-form
-        (newResult)="assignResult($event)"
-      />
+      <app-form (newResult)="assignResult($event)" />
     </div>
     <div class="card-footer text-center">
-      <app-result
-        [value]="result"
-      />
+      <app-result [value]="result" />
     </div>
   </section>
 </main>
